init 0.11 for cvs

--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,5 @@ Temporary Items
 .idea/
 Would skip repository pkg/dep/sources/https---github.com-spf13-pflag
 Would skip repository pkg/dep/sources/https---go.googlesource.com-crypto
-pkg/darwin_amd64
-src/ioncreate.com/tools/vvssh/doc/
+pkg/
 src/ioncreate.com/tools/vvssh/vendor/
